--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "license": "ISC",
   "dependencies": {
     "@epic-web/remember": "^1.1.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "custom-env": "^2.0.6",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.44.4",
@@ -49,7 +50,7 @@
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "cross-env": "^10.0.0",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "supertest": "^6.3.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
