Prod deployment & CI/CD

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Habit Tracker API for Node.js course",
   "main": "src/index.ts",
   "type": "module",
+  "engines": {
+    "node": ">=24.3.0"
+  },
   "scripts": {
     "dev": "node src/index.ts",
     "start": "node src/index.ts",
@@ -50,7 +53,7 @@
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "cross-env": "^10.0.0",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.8",
     "supertest": "^6.3.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
